null_code/build/log/idf_py_stdout_output_56100
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/jadenvelasco/Documents/NULL/null_code/build/bootloader/esp-idf/esptool_py && /Users/jadenvelasco/.espressif/python_env/idf5.5_py3.12_env/bin/python /Users/jadenvelasco/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/jadenvelasco/Documents/NULL/null_code/build/bootloader/bootloader.bin
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/button.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/button.c.obj 
/Users/jadenvelasco/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.2\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/jadenvelasco/Documents/NULL/null_code/build/config -I/Users/jadenvelasco/Documents/NULL/null_code/main -I/Users/jadenvelasco/esp/esp-idf/components/newlib/platform_include -I/Users/jadenvelasco/esp/esp-idf/components/freertos/config/include -I/Users/jadenvelasco/esp/esp-idf/components/freertos/config/include/freertos -I/Users/jadenvelasco/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/jadenvelasco/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/jadenvelasco/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/jadenvelasco/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/jadenvelasco/esp/esp-idf/components/freertos/esp_additions/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/power_supply/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/Users/jadenvelasco/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/Users/jadenvelasco/esp/esp-idf/components/heap/include -I/Users/jadenvelasco/esp/esp-idf/components/heap/tlsf -I/Users/jadenvelasco/esp/esp-idf/components/log/include -I/Users/jadenvelasco/esp/esp-idf/components/soc/include -I/Users/jadenvelasco/esp/esp-idf/components/soc/esp32s3 -I/Users/jadenvelasco/esp/esp-idf/components/soc/esp32s3/include -I/Users/jadenvelasco/esp/esp-idf/components/soc/esp32s3/register -I/Users/jadenvelasco/esp/esp-idf/components/hal/platform_port/include -I/Users/jadenvelasco/esp/esp-idf/components/hal/esp32s3/include -I/Users/jadenvelasco/esp/esp-idf/components/hal/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_rom/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_rom/esp32s3/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/jadenvelasco/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/jadenvelasco/esp/esp-idf/components/esp_common/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_system/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_system/port/soc -I/Users/jadenvelasco/esp/esp-idf/components/esp_system/port/include/private -I/Users/jadenvelasco/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/jadenvelasco/esp/esp-idf/components/xtensa/include -I/Users/jadenvelasco/esp/esp-idf/components/xtensa/deprecated_include -I/Users/jadenvelasco/esp/esp-idf/components/lwip/include -I/Users/jadenvelasco/esp/esp-idf/components/lwip/include/apps -I/Users/jadenvelasco/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/jadenvelasco/esp/esp-idf/components/lwip/lwip/src/include -I/Users/jadenvelasco/esp/esp-idf/components/lwip/port/include -I/Users/jadenvelasco/esp/esp-idf/components/lwip/port/freertos/include -I/Users/jadenvelasco/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/jadenvelasco/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/jadenvelasco/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_i2c/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_lcd/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_lcd/interface -I/Users/jadenvelasco/esp/esp-idf/components/esp_lcd/rgb/include -I/Users/jadenvelasco/esp/esp-idf/components/driver/deprecated -I/Users/jadenvelasco/esp/esp-idf/components/driver/i2c/include -I/Users/jadenvelasco/esp/esp-idf/components/driver/touch_sensor/include -I/Users/jadenvelasco/esp/esp-idf/components/driver/twai/include -I/Users/jadenvelasco/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_pm/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_ringbuf/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_gpio/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_spi/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_i2s/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/jadenvelasco/esp/esp-idf/components/sdmmc/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_sdio/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_dac/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_rmt/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_tsens/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_sdm/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_uart/include -I/Users/jadenvelasco/esp/esp-idf/components/vfs/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_ledc/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_parlio/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_driver_twai/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_wifi/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_wifi/include/local -I/Users/jadenvelasco/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_event/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_phy/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_phy/esp32s3/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_netif/include -I/Users/jadenvelasco/esp/esp-idf/components/esp_timer/include -I/Users/jadenvelasco/Documents/NULL/null_code/managed_components/espressif__esp_lvgl_port/include -I/Users/jadenvelasco/Documents/NULL/null_code/managed_components/lvgl__lvgl -I/Users/jadenvelasco/Documents/NULL/null_code/managed_components/lvgl__lvgl/src -I/Users/jadenvelasco/Documents/NULL/null_code/managed_components -I/Users/jadenvelasco/Documents/NULL/null_code/managed_components/lvgl__lvgl/examples -I/Users/jadenvelasco/Documents/NULL/null_code/managed_components/lvgl__lvgl/demos -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/jadenvelasco/Documents/NULL/null_code=. -fmacro-prefix-map=/Users/jadenvelasco/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/button.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/button.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/button.c.obj -c /Users/jadenvelasco/Documents/NULL/null_code/main/button.c
/Users/jadenvelasco/Documents/NULL/null_code/main/button.c: In function 'init_buttons':
/Users/jadenvelasco/Documents/NULL/null_code/main/button.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
